[package]
name = "angrybirds_cryptor_cli"
version = "0.4.0"
edition = "2021"
authors = ["ed1th"]
description = "Angry Birds file cryptor"
categories = ["command-line-utilities"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/LambdaEd1th/angrybirds-cryptor-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["std"] }
clap = { version = "4.5.53", features = ["derive", "help"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
log = "0.4.29"
env_logger = "0.11.8"
strum = { version = "0.27.2", features = ["derive"] }
walkdir = "2.5.0"
hex = "0.4.3"
indicatif = "0.18.3"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
