[workspace]
members = ["core", "cli"]
resolver = "2"

[workspace.dependencies]
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["std"] }
clap = { version = "4.5.53", features = ["derive", "help"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
log = "0.4.29"
env_logger = "0.11.8"
strum = { version = "0.27.2", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
