[package]
name = "angrybirds-cryptor-cli"
version = "0.4.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Command-line interface for Angry Birds file cryptor"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
toml = "0.8"

log = { workspace = true }
env_logger = { workspace = true }

angrybirds-cryptor-core = { path = "../core" }

# --- Release Profile Settings ---
# These settings apply to the entire workspace when running with --release
[profile.release]
strip = true      # Strip symbols from binary to reduce size
opt-level = "s"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce parallelism for better optimization
panic = "abort"   # Abort on panic instead of unwinding (smaller binary)
