[package]
name = "angrybirds-cryptor-cli"
version = "0.4.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Command-line interface for Angry Birds file cryptor"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
toml = "0.8"

log = { workspace = true }
env_logger = { workspace = true }

angrybirds-cryptor-core = { path = "../core" }
