[package]
name = "angrybirds-cryptor-core"
version = "0.4.0"
edition = "2021"
authors = ["ed1th"]
description = "Core library for Angry Birds file cryptor"
license = "GPL-3.0-or-later"

[dependencies]
aes = { workspace = true }
cbc = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
