[package]
name = "angrybirds-cryptor-core"
version = "0.4.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Core library for Angry Birds file cryptor"

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
thiserror = "2.0.17"
hex = "0.4.3"
toml = "0.9.8"

cipher = { version = "0.4.4", features = ["alloc", "block-padding", "std"] }
serde = { version = "1.0.228", features = ["derive"] }

log = { workspace = true }
